Development Portal (2015-07-23 shi)
==============================
Added translations for Search
Added Search headers for main pages
Added classes to Search columns


Development Portal (2015-06-24 shi)
==============================
Temporary fix mobile view
Added icons to Search dropdown
Added footnote to SAVi for published currencies
Added translations for footnotes in SAVi
Added IATI year to piecharts


Development Portal (2015-06-23 shi)
==============================
Added initial page layout for Search
Added labels to search
Clean up CSS for Search
Added icons for Search and labels
Added translation for Change Settings text


Development Portal (2015-06-18 shi)
==============================
Added settings dropdown buttons and link
Added translations for settings text
Fixed about page options
Added settings icon for themes
Hide breadcrumbs on country / publisher landing 
Added hover state to settings link


Development Portal (2015-06-15 shi)
==============================
Removed year for donor activities and sector views
Fixed cursor hover state for title tables


Development Portal (2015-06-06 shi)
==============================
Fixed colour of other RGBA themes for SAVi
Icons now match themes


Development Portal (2015-06-05 shi)
==============================
Fixed colour of other RGBA themes for <result>
Graphs now math themes


Development Portal (2015-06-04 shi)
==============================
Changed email to support@iatistandard.org
Generator, SAVi, blogposts, translations email change


Development Portal (2015-05-22 shi)
==============================
Result description now visible in SAVi
Added white-space to descriptions for better legibility in SAVi
Added list numbers to Roles in SAVi
Fixed layout for Print-Friendly SAVi
Piechart grayscaled in Print-Friendly SAVi
Layout bug fix for onsite SAVi


Development Portal (2015-04-23 shi)
==============================
Bug fix SAVi transaction description for IE11


Development Portal (2015-03-20 shi)