@@ -3,6 +3,7 @@ Development Portal (2015-07-23 shi)
 Added translations for Search
 Added Search headers for main pages
 Added classes to Search columns
+Optimised Search layout
 
 
 Development Portal (2015-06-24 shi)
